# rust-stm32-sign

./: Cargo.toml  ReadMe.md
src/: is42s32800j.rs  main.rs  signer.rs
