[package]
name = "sign"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
ecdsa = "0.16.9"
embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt",  "time-driver-any", "stm32h747xi-cm7", "memory-x"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "alloc", "critical-section"]}
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand_core = "0.6.4"
rsa = { version = "0.9.7", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["oid"]}
stm32-fmc = "0.3.2"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true # <-
incremental = false
opt-level = 0 # <-
overflow-checks = true # <-
